--- a/readerBoard.css
+++ b/readerBoard.css
@@ -27,11 +27,14 @@
 }
 
 .nextDepartureTitle {
-    width: minmax(1px 2px);
     grid-column: 1 / -1;
     padding-bottom: 10px;
     justify-self: center;
     align-self: center;
+}
+
+.nextDepartureItem {
+
 }
 
 .stopName {
