--- a/Bus.css
+++ b/Bus.css
@@ -1,11 +1,49 @@
-#instructions{
+.startContainer {
+    display: grid;
+    grid-gap: 10px;
+}
+
+.stopsInput {
+    grid-template-columns: auto auto 1fr;
+}
+
+.stopPrompt {
+    grid-row: 1;
+}
+
+.stopInput {
+    grid-row: 2;
+    grid-column: 1;
+    margin-left: 15px;
+}
+
+.stopConfirm {
+    grid-row: 2;
+    grid-column: 2;
+}
+
+.instructions{
     font-size:20pt;
     padding: 10px;
-
 }
-#button{
 
-    font-size: 30pt;
+.theming {
+    display: grid;
+}
 
+.colorPrompt {
+    margin-left: 15px;
+}
+
+.goPromptContainer {
+    grid-template-columns: auto 1fr;
+}
+
+.goPrompt {
+    grid-row: 1;
+}
+
+.go_btm {
+    grid-row: 2;
 }
 
